# research-report-agent

./: LICENSE  README.md  pyproject.toml
agent/: __init__.py  cli.py  graph.py  prompts.py  tools.py
tests/: test_graph.py  test_tools.py
